logs/pysvg.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pysvg'...
Compiling './lib/python3.5/site-packages/pysvg/builders.py'...
***   File "./lib/python3.5/site-packages/pysvg/builders.py", line 294
    if value <> None and value <> '':
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysvg/parser.py'...
***   File "./lib/python3.5/site-packages/pysvg/parser.py", line 32
    print calculateMethodName(attr)+' not found in:'+obj._elementName
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysvg/shape.py'...
***   File "./lib/python3.5/site-packages/pysvg/shape.py", line 91
    def moveToPoint(self, (x,y)):
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysvg/text.py'...
***   File "./lib/python3.5/site-packages/pysvg/text.py", line 144
    if content <> None:
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysvg-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
